--- a/classes/AccountAutomationsTest2.cls
+++ b/classes/AccountAutomationsTest2.cls
@@ -4,26 +4,26 @@ private class AccountAutomationsTest2 {
     @isTest static void testDefaultDescription(){
         Account acc = new Account(Name = 'My Test Account');
         insert acc;
-        acc = AccountAutomations.setDefaultDescription(acc);
+        acc = AccountAutomations2.setDefaultDescription(acc);
         System.assertEquals('Default description', acc.Description, 'When description is null, it is updated to Default description');
 
         acc.Description = 'New Description Manual';
         
-        acc = AccountAutomations.setDefaultDescription(acc);
+        acc = AccountAutomations2.setDefaultDescription(acc);
         System.assertNotEquals('Default description', acc.Description, 'When description is NOT null, it is NOT updated to Default description');
     }
 
     @isTest static void testDefaultSite(){
         Account acc = new Account(Name = 'My Test Account');
         insert acc;
-        acc = AccountAutomations.setDefaultSite(acc);
+        acc = AccountAutomations2.setDefaultSite(acc);
         System.assertEquals('Single location', acc.Site, 'Default Site is Single location');
     }
 
     @isTest static void testDefaultShippingAddress(){
         Account acc = new Account(Name = 'My Test Account');
         insert acc;
-        acc = AccountAutomations.setDefaultShippingAddress(acc);
+        acc = AccountAutomations2.setDefaultShippingAddress(acc);
         System.assertEquals('111 W Illinois St', acc.ShippingStreet, 'Default ShippingStreet is 111 W Illinois St');
         System.assertEquals('Chicago', acc.ShippingState, 'Default Shippingtate is Chicago');
         System.assertEquals('60654', acc.ShippingPostalCode, 'Default ShippingPostalCode is 60654');
@@ -32,7 +32,7 @@ private class AccountAutomationsTest2 {
     @isTest static void testDefaultPhone(){
         Account acc = new Account(Name = 'My Test Account');
         insert acc;
-        acc = AccountAutomations.setDefaultPhone(acc);
+        acc = AccountAutomations2.setDefaultPhone(acc);
         System.assertEquals('9999999', acc.Phone, 'Default phone number is 9999999');
     }
 
