--- a/classes/AccountAutomations.cls
+++ b/classes/AccountAutomations.cls
@@ -15,7 +15,7 @@ public class AccountAutomations {
     }
     public static Account setDefaultShippingAddress(Account a){
         a.shippingstreet = 'Basauri, 6'; 
-        a.shippingstate = 'Madrid';
+        a.shippingstate = 'Barcelona';
         a.shippingpostalcode ='32123';
         return a;
     }
