--- a/classes/AccountAutomations.cls
+++ b/classes/AccountAutomations.cls
@@ -6,6 +6,7 @@ public class AccountAutomations {
             return a;
             //test
             //test2
+            //test3
         }
     }
     public static Account setDefaultBillingAddress(Account a){
